fix overflow bugs on mobile devices in displaying users

--- a/src/components/userCardStyle.css
+++ b/src/components/userCardStyle.css
@@ -1,5 +1,5 @@
 
-.container {
+.card-container {
     width: 15rem;
     height: 25rem;
     background-image: linear-gradient(to bottom, #00b87f, #007e4f); 
@@ -8,7 +8,8 @@
     flex-flow: column nowrap;
     justify-content: flex-start;
     box-shadow: 1px 2px 8px 1px rgb(204, 204, 204);
-    margin-top: 1.1rem;      
+    margin-top: 1.1rem;   
+    box-sizing: border-box;   
 }
 
 
@@ -99,3 +100,15 @@
     box-shadow: 0px 0px;
    
 }
+
+@media screen and (max-width:900px) {
+    .card-container{
+        width: 12rem;
+    }  
+}
+/* @media screen and (max-width:700px) {
+    .card-container{
+        width: 8rem;
+       
+    }  
+} */
